--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@golden-tiger/javascript-package-template",
-  "version": "0.0.0",
-  "description": "@golden-tiger/javascript-package-template",
+  "name": "@golden-tiger/serializer",
+  "version": "0.0.1",
+  "description": "@golden-tiger/serializer",
   "main": "./lib/cjs-module.js",
   "module": "./lib/es-module.js",
   "scripts": {
