--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@golden-tiger/serializer",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "@golden-tiger/serializer",
   "main": "./lib/cjs-module.js",
   "module": "./lib/es-module.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CHENGCHANGHU/javascript-package-template.git"
+    "url": "git+https://github.com/CHENGCHANGHU/serializer.git"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -24,14 +24,14 @@
   ],
   "keywords": [
     "golden-tiger",
-    "javascript-package-template"
+    "serializer"
   ],
   "author": "Cheng ChangHu",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/CHENGCHANGHU/javascript-package-template/issues"
+    "url": "https://github.com/CHENGCHANGHU/serializer/issues"
   },
-  "homepage": "https://github.com/CHENGCHANGHU/javascript-package-template#readme",
+  "homepage": "https://github.com/CHENGCHANGHU/serializer#readme",
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
